--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,11 +12,13 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-      - uses: RodDevOps/s3-sync-action@master
-        with:
-          args: --acl public-read --follow-symlinks --delete  --exclude '.git/*'
+      - uses: actions/checkout@v4
+      - name: Sync files to S3
+        run: |
+          aws s3 sync . s3://your-bucket-name \
+          --acl public-read \
+          --exclude ".git/*" \
+          --delete
 
       - name: Setup AWS
         uses: aws-actions/configure-aws-credentials@v2 
@@ -27,3 +29,4 @@ jobs:
  
       - name: Delete cache
         run: aws cloudfront create-invalidation --distribution-id E213E3BUMDTDNQ --paths "/*"
+
