--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,7 @@ jobs:
       - uses: actions/checkout@v4
       - name: Sync files to S3
         run: |
-          aws s3 sync . s3://your-bucket-name \
+          aws s3 sync . s3://desfio-latam-rod \
           --acl public-read \
           --exclude ".git/*" \
           --delete
